--- a/src/components/styles/home.css
+++ b/src/components/styles/home.css
@@ -2,46 +2,44 @@
     padding: 3rem 5rem;
     width: 85%;
 }
-.home h2{
-    font-weight: 500;
+.home-header{
+    display: flex;
+    align-items: center;
+}
+.home-lang-select{
+    margin-left: 1rem;
+}
+.home-lang-select select{
+    padding: .5rem;
+    border: 1px solid rgb(209, 209, 209);
+    border-radius: 7px;
+    background-color: rgb(235, 234, 234);
+}
+option{
+    background-color: rgb(235, 234, 234);
+    border: 1px solid rgb(209, 209, 209);;
 }
 .home-content{
-    padding: 3rem 0;
-    display: grid;
-    grid-gap: 3rem 4rem;
-    grid-template-columns: repeat(2, 1fr);
+    padding: 1rem 0;
     text-align: justify;
     line-height: 1.5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.home-ph > p{
-    margin-top: 1rem;
-}
-.home-img > img{
-    object-fit: cover;
-    border-radius: 10px;
-    box-shadow: 0px 0px 5px rgb(187, 187, 187);
-    width: 100%;
-    height: 100%;
-}
-.home-img{
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
-    border-radius: 10px;
-    box-shadow: 0px 0px 7px gray;
-}
-.home-img p{
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: -7rem;
-    background: rgba(0, 0, 0, 0.5);
-    border-radius: 0 0 10px 10px;
+.home-text{
     padding: 2rem;
+    background-color: rgb(235, 234, 234);
+    border-radius: 7px;
+    width: 40%;
     transition: 300ms ease-in-out;
-    color: white;
-    font-weight: 300;
 }
-.home-img:hover p{
-    bottom: 0;
+.home-text-span{
+    font-size: 2rem;
+    margin-right: .2rem;
+}
+.home-text:hover{
+    background-color: #043038;
+    color: white;
+    box-shadow: 0px 0px 10px rgb(153, 153, 153);
 }
