--- a/src/components/styles/home.css
+++ b/src/components/styles/home.css
@@ -14,6 +14,10 @@
     border: 1px solid rgb(209, 209, 209);
     border-radius: 7px;
     background-color: rgb(235, 234, 234);
+    outline: none;
+}
+.home-lang-select select option:before{
+    background-color: rgb(235, 234, 234);
 }
 option{
     background-color: rgb(235, 234, 234);
@@ -33,6 +37,11 @@ option{
     border-radius: 7px;
     width: 40%;
     transition: 300ms ease-in-out;
+    box-shadow: 0px 0px 3px rgb(194, 192, 192);
+    animation: textAppear;
+    animation-duration: 300ms;
+    animation-fill-mode: forwards;
+    animation-timing-function: ease-out;
 }
 .home-text-span{
     font-size: 2rem;
@@ -42,4 +51,15 @@ option{
     background-color: #043038;
     color: white;
     box-shadow: 0px 0px 10px rgb(153, 153, 153);
+}
+
+@keyframes textAppear{
+    0%{
+        opacity: 0;
+        transform: scale(0.9);
+    }
+    100%{
+        opacity: 1;
+        transform: scale(1);
+    }
 }
