--- a/src/components/styles/menu.css
+++ b/src/components/styles/menu.css
@@ -1,6 +1,6 @@
 .menu{
     width: 15%;
-    height: 100vh;
+    height: 100%;
     background-color: white;
     box-shadow: 0px 0px 10px rgb(214, 213, 213);
     display: flex;
@@ -8,7 +8,7 @@
     justify-content: space-between;
 }
 .menu-nav{
-    margin-top: -17.5rem;
+    margin-top: -7rem;
     padding: 0 2rem;
 }
 .menu-nav ul{
