--- a/src/components/styles/menu.css
+++ b/src/components/styles/menu.css
@@ -1,6 +1,9 @@
 .menu{
-    width: 15%;
-    height: 100%;
+    position: fixed;
+    left: 5vw;
+    right: 80vw;
+    top:0;
+    bottom: 0;
     background-color: white;
     box-shadow: 0px 0px 10px rgb(214, 213, 213);
     display: flex;
