--- a/src/App.css
+++ b/src/App.css
@@ -3,25 +3,28 @@
 body{
   width: 100vw;
   height: 100%;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
   background-color: rgb(231, 230, 230);
   padding: 0 2vw;
 }
 .App{
   display: flex;
   min-height: 100%;
+  overflow-x: hidden;
 }
 a,h1,h2,h3,h4,p, label, button{
   font-family: 'Montserrat', sans-serif;
   text-shadow: none;
 }
-.home, .about, .writing, .art, .contact, .sounds, .videos{
+.home, .about, .writing, .art, .contact, .SV, .videos{
   margin-left: 18vw;
   animation: appearing;
   animation-duration: 700ms;
   animation-fill-mode: forwards;
   animation-timing-function: cubic-bezier(.85,.63,.58,1.17);
   height: 100%;
+  overflow-x: hidden;
 } 
 @keyframes appearing{
   from{
