--- a/src/components/styles/home.css
+++ b/src/components/styles/home.css
@@ -32,10 +32,11 @@ option{
     align-items: center;
 }
 .home-text{
+    margin-top: 5rem;
     padding: 2rem;
     background-color: rgb(235, 234, 234);
     border-radius: 7px;
-    width: 40%;
+    width: 60%;
     transition: 300ms ease-in-out;
     box-shadow: 0px 0px 3px rgb(194, 192, 192);
     animation: textAppear;
@@ -61,5 +62,11 @@ option{
     100%{
         opacity: 1;
         transform: scale(1);
+    }
+}
+
+@media (max-width: 1024px){
+    .home-text{
+        width: 98%;
     }
 }
