--- a/src/components/styles/home.css
+++ b/src/components/styles/home.css
@@ -28,15 +28,15 @@ option{
     text-align: justify;
     line-height: 1.5;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
+    align-items: flex-start;
 }
 .home-text{
     margin-top: 5rem;
     padding: 2rem;
     background-color: rgb(235, 234, 234);
     border-radius: 7px;
-    width: 60%;
+    width: 47%;
     transition: 300ms ease-in-out;
     box-shadow: 0px 0px 3px rgb(194, 192, 192);
     animation: textAppear;
@@ -66,6 +66,11 @@ option{
 }
 
 @media (max-width: 1024px){
+    .home-content{
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+    }
     .home-text{
         width: 98%;
     }
