--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,8 @@ h2{
 select:focus, input:focus, button:focus{
   outline: none;
 }
+
+button{
+  background-color: transparent;
+  border: none;
+}
