Change in contact section, added loading component

--- a/src/components/styles/about.css
+++ b/src/components/styles/about.css
@@ -4,19 +4,14 @@
 }
 .about-content{
     margin-top: 4rem;
-    padding: 3rem 6rem;
-    background-image: url('../../media/flutemusic.jpg');
-    background-position: right center;
-    background-size: cover;
-    background-attachment: scroll;
-    border-radius: 10px;
-    box-shadow: 0px 0px 6px gray;
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: repeat(2, 1fr);
 }
 .about-content *{
     color: white;
 }
 .about-text{
-    margin-top: 5rem;
     background-color: rgba(0,0,0,0.5);
     padding: 2rem;
     border-radius: 7px;
