--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 
 body{
   width: 100vw;
-  height: 100%;
+  min-height: 100vh;
   overflow-y: scroll;
   overflow-x: hidden;
   background-color: rgb(231, 230, 230);
