--- a/src/components/styles/contact.css
+++ b/src/components/styles/contact.css
@@ -37,13 +37,17 @@
 .contact-mth1 ul li span{
     padding: 1rem;
 }
+
+/********************************************************/
+
 .contact-mth2{
-    width: 45%;
-    background-color: #ed5f5b;
+    width: 90%;
+    /* background-color: #ed5f5b; */
+    background-color: white;
     border-radius: 7px;
     padding: 2rem 1rem 1rem 1rem;
-    box-shadow: 0px 0px 5px black;
-    min-height: 50vh;
+    box-shadow: 0px 0px 5px rgb(206, 204, 204);
+    /* min-height: 50vh; */
 }
 
 .contact-form{
@@ -54,19 +58,24 @@
     align-items: flex-start;
 }
 .contact-form label{    
+    color: black!important;
     display: flex;
     flex-direction: column;
     width: 100%;
     color: white;
     font-weight: 500;
+    font-size: 1.2rem;
     text-transform: uppercase;
-    margin-top: 1rem;
+    margin-top: 1.2rem;
+    padding: .5rem;
 }
 .contact-form input, .contact-form textarea{
-    padding: .5rem .5rem;
+    padding: 1rem .5rem;
     border: 2px solid rgb(212, 211, 211);
     border-radius: 5px;
     color: #043038;
+    text-transform: uppercase;
+    margin-top: .5rem;
 }
 .contact-form input:focus, .contact-form textarea:focus{
     border: 2px solid #043038;
@@ -90,6 +99,7 @@
 }
 @media (max-width: 1024px){
     .contact-content{
+        padding: 2rem 0;
         display: flex;
         flex-direction: column;
     }
@@ -97,6 +107,6 @@
         width: 100%;
     }
     .contact-mth2{
-        margin-top: 5rem;
+        margin-top: 0rem;
     }
 }
