--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ a,h1,h2,h3,h4,p, label, button, li{
   font-family: 'Montserrat', sans-serif;
   text-shadow: none;
 }
-.home, .about, .writing, .art, .contact, .SV, .videos{
+.home, .about, .writing, .art, .contact, .SV, .store{
   margin-left: 18vw;
   animation: appearing;
   animation-duration: 700ms;
