menu now responsive

--- a/src/App.css
+++ b/src/App.css
@@ -54,3 +54,9 @@ button{
   background-color: transparent;
   border: none;
 }
+
+@media (max-width: 768px){
+  .home, .about, .writing, .art, .contact, .SV, .store{
+    margin-left: 0;
+  }
+}
