--- a/src/components/styles/menu.css
+++ b/src/components/styles/menu.css
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    overflow: hidden;
 }
 .menu-nav{
     margin-top: -7rem;
@@ -55,8 +56,54 @@
 .menu-media > img{
     width: 80%;
 }
+.btn-menu{
+    display: none;
+
+}
 @media (max-width: 1024px){
     .menu{
         left: 0
+    }
+}
+@media (max-width: 768px){
+    .menu{
+        right: 100vw;
+        z-index: 1;
+    }
+    .btn-menu{
+        display: inline-block; 
+        position: absolute;
+        top: 1rem;
+        right: 1rem;
+        background-color: white;
+        border-radius: 50%;
+        width:40px;
+        height: 40px;
+    }
+    .menu-show{
+        animation: menuShow 500ms ease-out forwards;
+    }
+    .menu-hide{
+        animation: menuHide 500ms ease-out forwards;
+    }
+    @keyframes menuShow{
+        0%{
+            left:-40vw;
+            right: 100vw
+        }
+        100%{
+            left: 0vw;
+            right:60vw
+        }
+    }
+    @keyframes menuHide{
+        0%{ 
+            left: 0vw;
+            right: 60vw
+        }
+        100%{
+            left: -40vw;
+            right:100vw
+        }
     }
 }
