--- a/src/components/styles/home.css
+++ b/src/components/styles/home.css
@@ -75,3 +75,15 @@ option{
         width: 98%;
     }
 }
+@media (max-width:425px){
+    .home{
+        padding: 3rem 0;
+        width: 100%;
+    }
+    .home-content{
+        justify-content: center;
+    }
+    .home-text{
+        width: 100%;
+    }
+}
