--- a/src/components/styles/menu.css
+++ b/src/components/styles/menu.css
@@ -79,6 +79,7 @@
         border-radius: 50%;
         width:40px;
         height: 40px;
+        z-index: 2;
     }
     .menu-show{
         animation: menuShow 500ms ease-out forwards;
@@ -103,6 +104,34 @@
         }
         100%{
             left: -40vw;
+            right:100vw
+        }
+    }
+}
+@media (max-width: 425px){
+    .menu-show{
+        animation: menuShow 500ms ease-out forwards;
+    }
+    .menu-hide{
+        animation: menuHide 500ms ease-out forwards;
+    }
+    @keyframes menuShow{
+        0%{
+            left:-60vw;
+            right: 100vw
+        }
+        100%{
+            left: 0vw;
+            right:40vw
+        }
+    }
+    @keyframes menuHide{
+        0%{ 
+            left: 0vw;
+            right: 40vw
+        }
+        100%{
+            left: -60vw;
             right:100vw
         }
     }
