--- a/src/components/styles/loading.css
+++ b/src/components/styles/loading.css
@@ -1,13 +1,17 @@
 .loading{
-    width: 100%;
+    width: 100vw;
+    max-width: 100vw;
     height: 100vh;
+    max-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: auto;
 }
 .loading-img-container{
-    /* border-bottom: 5px solid blue; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .loading-img-container img{
     width: 100%;
