--- a/src/components/styles/menu.css
+++ b/src/components/styles/menu.css
@@ -19,7 +19,7 @@
 .menu-nav ul{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
 }
 .menu-nav ul button{
     border-radius: 7px;
