--- a/src/components/styles/contact.css
+++ b/src/components/styles/contact.css
@@ -119,7 +119,7 @@
         padding: 1rem .5rem;
     }
     .contact-mth2{
-        padding: .5rem;
+        padding: .5rem .5rem 2rem .5rem;
     }
     .contact-form-flex{
         flex-direction: column;
