--- a/src/components/styles/menu.css
+++ b/src/components/styles/menu.css
@@ -11,6 +11,7 @@
     justify-content: space-between;
     align-items: center;
     overflow: hidden;
+    will-change: left, right;
 }
 .menu-nav{
     margin-top: -7rem;
