--- a/src/components/styles/sounds.css
+++ b/src/components/styles/sounds.css
@@ -67,6 +67,12 @@
         grid-gap: 2rem
     }
 }
+@media (max-width: 768px){
+  .SV{
+    width: 100%;
+    padding: 3rem 2rem;
+  }
+}
 @media (max-width: 425px){
   .SV{
     padding: 4rem 1rem;
