--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ a,h1,h2,h3,h4,p, label, button, li{
   font-family: 'Montserrat', sans-serif;
   text-shadow: none;
 }
-.home, .about, .writing, .art, .contact, .SV, .store{
+.home, .about, .writing, .art, .contact, .SV, .store, .prints{
   margin-left: 18vw;
   animation: appearing;
   animation-duration: 700ms;
@@ -56,7 +56,7 @@ button{
 }
 
 @media (max-width: 768px){
-  .home, .about, .writing, .art, .contact, .SV, .store{
+  .home, .about, .writing, .art, .contact, .SV, .store, .prints{
     margin-left: 0;
   }
 }
