--- a/src/components/styles/menu.css
+++ b/src/components/styles/menu.css
@@ -29,7 +29,7 @@
     cursor: pointer;
     text-align: left;
     font-weight: 500;
-    font-size: 1.05rem;
+    font-size: 17px;
     width: 60%;
     transition: 200ms ease-out;
 }
