--- a/src/components/styles/menu.css
+++ b/src/components/styles/menu.css
@@ -13,9 +13,13 @@
     overflow: hidden;
     will-change: left, right;
 }
+.menu img{
+    max-width: 100%;
+    max-height: 30%;
+}
 .menu-nav{
     margin-top: -7rem;
-    padding: 0 2rem;
+    padding: 0rem;
 }
 .menu-nav ul{
     display: flex;
