--- a/src/components/styles/menu.css
+++ b/src/components/styles/menu.css
@@ -20,15 +20,16 @@
 .menu-nav{
     margin-top: -7rem;
     padding: 0rem;
+    width: 100%;
 }
 .menu-nav ul{
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
 }
 .menu-nav ul button{
     border-radius: 7px;
-    padding: .7rem 1rem;
+    padding: .7rem 0;
     margin-top: .5rem;
     cursor: pointer;
     text-align: left;
@@ -78,6 +79,10 @@
     }
     .menu-nav{
         margin: 0;
+    }
+    .menu-nav ul button{
+        padding: .7rem 0rem;
+        text-align: left;
     }
     .menu > img{
         width: 60%
@@ -131,11 +136,11 @@
         margin-top: 0;
     }
     .menu-nav ul button{
-        text-align: center;
+        padding: .7rem 5rem;
         width: 100%;
     }
     .menu > img{
-        width: 50%;
+        width: 100%;
     }
     @keyframes menuShow{
         0%{
