--- a/src/components/styles/home.css
+++ b/src/components/styles/home.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600&display=swap');
 .home{
     padding: 3rem 5rem;
     width: 85%;
@@ -53,7 +54,9 @@ option{
     color: white;
     box-shadow: 0px 0px 10px rgb(153, 153, 153);
 }
-
+.home-kannada p{
+    font-family: 'Baloo 2', cursive;
+}
 @keyframes textAppear{
     0%{
         opacity: 0;
