--- a/src/components/styles/menu.css
+++ b/src/components/styles/menu.css
@@ -18,7 +18,7 @@
     max-height: 30%;
 }
 .menu-nav{
-    margin-top: -7rem;
+    /* margin-top: -7rem; */
     padding: 0rem;
     width: 100%;
 }
@@ -67,7 +67,7 @@
     display: none;
 
 }
-@media (max-width: 1024px){
+@media (max-width: 1440px){
     .menu{
         left: 0
     }
