--- a/src/components/styles/loading.css
+++ b/src/components/styles/loading.css
@@ -1,32 +1,18 @@
 .loading{
     width: 100vw;
-    max-width: 100vw;
     height: 100vh;
-    max-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
+    overflow: hidden;
 }
 .loading-img-container{
+    height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 .loading-img-container img{
-    width: 100%;
-    animation-name: loadingImg;
-    animation-duration: 1000ms;
-    animation-fill-mode: forwards;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
+    width: 10%;
 }
-@keyframes loadingImg{
-    0%{
-        filter:brightness(1);
-    }
-    100%{
-        filter:brightness(2);
-    }
+.loading-img-container img:nth-child(2){
+    margin-top: 2rem;
 }
-
