--- a/src/components/styles/menu.css
+++ b/src/components/styles/menu.css
@@ -13,7 +13,7 @@
     overflow: hidden;
     will-change: left, right;
 }
-.menu img{
+.menu > img{
     max-width: 100%;
     max-height: 30%;
 }
@@ -161,5 +161,17 @@
             left: -60vw;
             right:100vw
         }
+    }
+}
+@media (max-height: 750px){
+    .menu > img{
+        width: 70%;
+    }
+    .menu-nav ul button{
+        padding: .6rem 0;
+        font-size: 14px;
+    }
+    .menu-media{
+        transform: scale(.8);
     }
 }
