--- a/src/components/styles/menu.css
+++ b/src/components/styles/menu.css
@@ -168,7 +168,7 @@
         width: 70%;
     }
     .menu-nav ul button{
-        padding: .6rem .5rem;
+        padding: .6rem 1.5rem;
         font-size: 14px;
     }
     .menu-media{
