--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@ body{
   overflow-x: hidden;
   background-color: rgb(231, 230, 230);
   padding: 0 2vw;
+  position: relative;
 }
 .App{
   display: flex;
