--- a/src/components/styles/home.css
+++ b/src/components/styles/home.css
@@ -25,27 +25,27 @@ option{
     border: 1px solid rgb(209, 209, 209);;
 }
 .home-content{
-    padding: 2rem 0;
+    padding: 2rem 0 1rem;
     text-align: justify;
     line-height: 1.5;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
 }
 .home-text{
-    min-height: 150px;
     position: relative;
     padding: 1rem 2rem;
     background-color: rgb(235, 234, 234);
     border-radius: 7px;
-    width: 90%;
+    width: 48%;
     transition: 300ms ease-in-out;
     box-shadow: 0px 0px 3px rgb(194, 192, 192);
     animation: textAppear;
     animation-duration: 300ms;
     animation-fill-mode: forwards;
     animation-timing-function: ease-out;
+    margin-top: 1rem;
 }
 .home-text-span{
     font-size: 2rem;
@@ -56,22 +56,8 @@ option{
     color: white;
     box-shadow: 0px 0px 10px rgb(153, 153, 153);
 }
-.home-text{
-    margin-top: 4rem;
-}
 .home-kannada p{
     font-family: 'Baloo 2', cursive;
-}
-.home-text p{
-    display: -webkit-box;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-}
-.home-full-text{
-    display: inline!important;
-    -webkit-line-clamp: 20;
-    overflow: scroll;
 }
 .btn-read-more{
     position: absolute;
