--- a/src/components/styles/writing.css
+++ b/src/components/styles/writing.css
@@ -3,21 +3,27 @@
     width: 85%;
 }
 .writing-content{
-    padding: 3rem;
+    padding: 0rem 2rem;
 }
 .writing-section{
+    margin-top: 2rem;
+    position: relative;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
     border-bottom: 1px solid rgb(194, 194, 194);
     padding: 2rem;
 }
+.writing-section:nth-of-type(1){
+    margin-top: .5rem;
+}
 .writing-section img{
-    max-width: 45%;
+    height: 300px;
+    max-width: 30%;
     box-shadow: 0px 0px 3px gray;
 }
 .writing-section-text{
-    margin-left: 4rem
+    margin-left: 2rem
 }
 .writing-section-text p{
     text-align: justify;
@@ -27,6 +33,12 @@
     margin-bottom: 2rem;
     font-size: 1.75rem;
     font-weight: 500;
+}
+.writing-pharagraph{
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 @media (max-width: 1440px){
     .writing-section-text h3{
@@ -80,4 +92,37 @@
     .writing-section{
         padding: 2rem .5rem;
     }
+}
+
+
+
+/***************/
+.writing-section-full{
+    position: relative;
+    padding-bottom: 4rem;
+}
+.writing-section-full h3{
+    font-size: 2em;
+    font-weight: 600;
+    color: #1633ff;;
+}
+.writing-section-full-content{
+    padding: 3rem 5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.writing-section-full-content p{
+    line-height: 2;
+    font-size: 1.1rem;
+}
+.writing-section-full-content img{
+    max-width: 40%;
+    border-radius: 7px;
+    box-shadow: 0px 0px 5px gray;
+}
+.btn-writing-full{
+    position: absolute;
+    right: 2rem;
+    bottom: 2rem;
 }
