--- a/src/components/styles/contact.css
+++ b/src/components/styles/contact.css
@@ -2,11 +2,11 @@
     color: white;
 }
 .contact{
-    padding: 3rem 5rem;
+    padding: 1rem 5rem;
     width: 85%;
 }
 .contact-content{
-    padding: 5rem 3rem;
+    padding: 2rem 1rem;
     display: flex;
     justify-content: space-around;
     width: 100%;
@@ -69,12 +69,11 @@
     margin-top: 1.2rem;
     padding: .5rem;
 }
-.contact-form input, .contact-form textarea{
+.contact-form input, .contact-form textarea, .contact select, .contact option{
     padding: 1rem .5rem;
     border: 2px solid rgb(212, 211, 211);
     border-radius: 5px;
     color: #043038;
-    text-transform: uppercase;
     margin-top: .5rem;
 }
 .contact-form input:focus, .contact-form textarea:focus{
@@ -130,4 +129,11 @@
     .contact-form-flex{
         flex-direction: column;
     }
+}
+
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
