--- a/src/components/styles/footer.css
+++ b/src/components/styles/footer.css
@@ -9,11 +9,11 @@ footer{
     background-color: rgb(255, 255, 255);
     box-shadow: 0px 0px 5px rgb(206, 205, 205);
     z-index: -1;
-    padding: 1rem;
+    padding: .5rem;
 
 }
 footer p{
     color: black;
-    font-weight: 500;
-    font-size: 1.1rem;
+    font-weight: 300;
+    font-size: .7rem;
 }
