--- a/src/components/styles/home.css
+++ b/src/components/styles/home.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600&display=swap');
 .home{
-    padding: 3rem 5rem;
+    padding: 1rem 5rem;
     width: 85%;
 }
 .home-header{
@@ -28,17 +28,15 @@ option{
     padding: 2rem 0 1rem;
     text-align: justify;
     line-height: 1.5;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-start;
+    display: grid;
+    grid-gap: 4rem;
+    grid-template-columns: repeat(2,1fr);
 }
 .home-text{
     position: relative;
     padding: 1rem 2rem;
     background-color: rgb(235, 234, 234);
     border-radius: 7px;
-    width: 48%;
     transition: 300ms ease-in-out;
     box-shadow: 0px 0px 3px rgb(194, 192, 192);
     animation: textAppear;
@@ -46,6 +44,10 @@ option{
     animation-fill-mode: forwards;
     animation-timing-function: ease-out;
     margin-top: 1rem;
+}
+.home-text p{
+    font-size: 1.1rem;
+    font-weight: 300;
 }
 .home-text-span{
     font-size: 2rem;
@@ -77,9 +79,7 @@ option{
 
 @media (max-width: 1024px){
     .home-content{
-        flex-direction: column;
-        align-items: center;
-        justify-content: flex-start;
+        grid-template-columns: repeat(1,1fr);
     }
     .home-text{
         width: 98%;
@@ -90,13 +90,13 @@ option{
         padding: 3rem 2.5rem;
         width: 100%;
     }
+    .home-content{
+        grid-gap: 2rem;
+    }
 }
 @media (max-width:425px){
     .home{
         padding: 3rem 0;
-    }
-    .home-content{
-        justify-content: center;
     }
     .home-text{
         width: 100%;
