--- a/src/components/styles/writing.css
+++ b/src/components/styles/writing.css
@@ -1,25 +1,33 @@
 .writing{
-    padding: 3rem 5rem;
+    padding: 1rem 5rem;
     width: 85%;
 }
 .writing-content{
-    padding: 0rem 2rem;
+    padding: 1rem 2rem;
 }
 .writing-section{
-    margin-top: 2rem;
+    cursor: pointer;
     position: relative;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
     border-bottom: 1px solid rgb(194, 194, 194);
-    padding: 2rem;
+    padding: 1REM;
+}
+.writing-section:after{
+    content:'';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    top: 0;
 }
 .writing-section:nth-of-type(1){
     margin-top: .5rem;
 }
 .writing-section img{
-    height: 300px;
-    max-width: 30%;
+    max-height: 200px;
+    max-width:400px;
     box-shadow: 0px 0px 3px gray;
 }
 .writing-section-text{
@@ -60,6 +68,9 @@
     }
     .writing-section-text{
         margin-left: 2rem;
+    }
+    .writing-section img{
+        max-width: 300px;
     }
 }
 @media (max-width: 768px){
